基本完成了。

--- a/src/dbcpconfig.properties
+++ b/src/dbcpconfig.properties
@@ -2,7 +2,7 @@
 driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/pmms
 username=root
-password=123456
+password=10086zzz
 
 #<!-- 初始化连接 -->
 initialSize=2
